--- a/New_site/1.html
+++ b/New_site/1.html
@@ -77,7 +77,7 @@
 	<div id="logos">
 		<!-- Society Logo -->
 		<div id="main">
-			<h1>BVPIEEE Student Branch</h1>
+			<h1>IEEE Student Branch</h1>
 			<h2>Bharati Vidyapeeth's College of Engineering</h2>
 		</div>
 		
@@ -87,7 +87,7 @@
 
 		<div id="university">
 
-			<a href="#" target="_blank"><img src="images/bvpieeelogo.jpg" id="img_school" name="img_school" width="140" height="51" alt="" /></a>
+			<a href="#" target="_blank"><img src="images/BVPIEEE.png" id="img_school" name="img_school" width="180" height="55" alt="" /></a>
 		</div>
 
 		<!-- Sign in link -->
